[package]
name = "mts_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = "4.5.1"
chrono = { version = "0.4.33", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "chrono", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.11.1"
r2d2 = "0.8.10"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
