[package]
name = "mts_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web = "4.5.1"
argon2 = "0.5.3"
base64 = "0.21.7"
chrono = { version = "0.4.33", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.1"
futures-util = "0.3.30"
hmac = "0.12.1"
juniper = { git = "https://github.com/graphql-rust/juniper.git", features = ["chrono", "uuid"]}
r2d2 = "0.8.10"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.113"
sha2 = "0.10.8"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
