[package]
name = "mts_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.4", features = ["http2"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
base64 = "0.21.7"
chrono = { version = "0.4.33", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "chrono", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
futures-util = "0.3.30"
hmac = "0.12.1"
hyper = { version = "1.3.1", features = ["client"] }
hyper-util = { version = "0.1.3", features = ["client", "client-legacy"] }
juniper = { version = "0.16.0", features = ["chrono", "uuid"] }
log = "0.4.21"
r2d2 = "0.8.10"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.113"
sha2 = "0.10.8"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["net", "macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace", "tracing"] }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
